# pkg-install

./: .editorconfig  .gitlab-ci.yml  Cargo.toml  README.md  cargo.sh  config.json  publish.sh
.github/workflows/: build.yml  close-pull-request.yml  rust.yml
config/arch/: pacman.json
config/cargo/: cargo.json
config/ubuntu/: apt.json
src/: command.rs  config.rs  lib.rs  main.rs  package.rs  phase.rs
