[package]
name = "arch-post-install"
description = "Arch Linux Post Installation"
version = "0.1.0"
authors = ["Sergey Kuznetsov <sergey.gh@fastmail.net>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
serde_json = "1.0.50"
serde = { version = "1.0.106", features = ["derive"] }
colored = "1.9.3"
structopt = "0.3.12"
enum-utils = "0.1.2"
indicatif = "0.14.0"
