[package]
name = "pkg-install"
description = "Package Installation helper"
version = "0.2.0"
authors = ["Serge K <serge.k@fastmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

[dependencies]
serde_json = "1.0.52"
serde = { version = "1.0.106", features = ["derive"] }
colored = "1.9.3"
structopt = "0.3.14"
enum-utils = "0.1.2"
indicatif = "0.14.0"
nix = "0.17.0"
Inflector = "0.11.4"
